Disabled fixed background on mobile

--- a/style.css
+++ b/style.css
@@ -19,22 +19,6 @@ body {
 	background-size: cover;
 }
 
-.backgroundFixed:before {
-	content: "";
-	display: block;
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	z-index: -10;
-	background: url(content/comp_blur.jpg) no-repeat center center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-}
-
 .roundedHeaderText {
 	border-radius: 5px;
 	color: white;
@@ -341,11 +325,11 @@ body {
 }
 
 .spacer-Skills {
-	/*background-image: url(content/bg1.png);*/
+	background-image: url(content/bg1.png);
 }
 
 .spacer-Portfolio {
-	/*background-image: url(content/bg2.jpg);*/
+	background-image: url(content/bg2.jpg);
 }
 
 /* Contact Section */
@@ -497,5 +481,10 @@ footer {
 	.portfolio-ProjHeader {
 		margin: 0;
 		padding-top: 10px;
+	}
+
+	/* Sadly fixed attachements dont work on mobile */
+	.backgroundFixed {
+		background-attachment: scroll;
 	}
 }
